--- a/product.html
+++ b/product.html
@@ -21,14 +21,15 @@
   <link rel="stylesheet" href="plugins/uikit/uikit.min.css" />
 
 
-  <title>Tất cả sản phẩm</title>
+  <title>News</title>
 
 </head>
 
 <body>
   <div class="header">
-    <a style="color: #ffffff;text-decoration: none;" href="index.html">MIỄN PHÍ VẬN CHUYỂN VỚI ĐƠN HÀNG NỘI THÀNH > 300K
-      - ĐỔI TRẢ TRONG 15 NGÀY - ĐẢM BẢO CHẤT LƯỢNG</a>
+    <a style="color: #ffffff;text-decoration: none;" href="index.html">FREE
+      SHIPPING WITH INTERNAL ORDER > 300K
+      - RETURN IN 15 DAYS - QUALITY GUARANTEE</a>
   </div>
 
   <!--Navbar-->
@@ -41,41 +42,20 @@
       <div class="desk-menu collapse navbar-collapse justify-content-md-center" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="index.html">TRANG CHỦ</a>
+            <a class="nav-link" href="index.html">HOME PAGE</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="product.html">BỘ SƯU TẬP</a>
-          </li>
-          <li class="nav-item lisanpham">
-            <a class="nav-link" href="detailproduct.html">SẢN PHẨM
-              <i class="fa fa-chevron-down" aria-hidden="true"></i>
-            </a>
-            <ul class="sub_menu">
-              <li class="">
-                <a href="detailproduct.html" title="Sản phẩm - Style 1">
-                  Sản phẩm - Style 1
-                </a>
-              </li>
-              <li class="">
-                <a href="detailproduct.html" title="Sản phẩm - Style 2">
-                  Sản phẩm - Style 2
-                </a>
-              </li>
-              <li class="">
-                <a href="detailproduct.html" title="Sản phẩm - Style 3">
-                  Sản phẩm - Style 3
-                </a>
-              </li>
-            </ul>
+            <a class="nav-link" href="product.html">PRODUCT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="introduce.html">GIỚI THIỆU</a>
+            <a class="nav-link" href="introduce.html">INTRODUCE</a>
           </li>
+          <li class="nav-item">
           <li class="nav-item">
             <a class="nav-link" href="blog.html">BLOG</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">LIÊN HỆ</a>
+            <a class="nav-link" href="contact.html">CONTACT</a>
           </li>
         </ul>
       </div>
@@ -92,32 +72,19 @@
           <div class="justify-content-md-center">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="index.html">TRANG CHỦ</a>
+                <a class="nav-link" href="index.html">HOME PAGE</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Product.html">BỘ SƯU TẬP</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle aaaa" href="#" id="navbarDropdown" role="button"
-                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <p>SẢN PHẨM</p>
-                  <i class="fa fa-angle-double-right"></i>
-
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="border:0;">
-                  <a class="dropdown-item" href="detailproduct.html" title="Sản phẩm - Style 1">Sản phẩm - Style 1</a>
-                  <a class="dropdown-item" href="detailproduct.html" title="Sản phẩm - Style 2">Sản phẩm - Style 2</a>
-                  <a class="dropdown-item" href="detailproduct.html" title="Sản phẩm - Style 3">Sản phẩm - Style 3</a>
-                </div>
+                <a class="nav-link" href="Product.html">PRODUCT</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="introduce.html">GIỚI THIỆU</a>
+                <a class="nav-link" href="introduce.html">INTRODUCE</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="blog.html">BLOG</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Contact.html">LIÊN HỆ</a>
+                <a class="nav-link" href="Contact.html">CONTACT</a>
               </li>
             </ul>
           </div>
@@ -134,7 +101,7 @@
                 color: #272727;
                 text-transform: uppercase;
                 margin: 3px 0 30px 0;
-                font-weight: 500; letter-spacing: 2px;">Tìm kiếm</h3>
+                font-weight: 500; letter-spacing: 2px;">Search</h3>
           <div class="search-box wpo-wrapper-search">
             <form action="search" class="searchform searchform-categoris ultimate-search">
               <div class="wpo-search-inner" style="display:inline">
@@ -163,20 +130,21 @@
                 color: #272727;
                 text-transform: uppercase;
                 margin: 3px 0 30px 0;
-                font-weight: 500; letter-spacing: 2px;">Giỏ hàng</h3>
+                font-weight: 500; letter-spacing: 2px;">Cart</h3>
           <div class="site-nav-container-last" style="color:#272727">
             <div class="cart-view clearfix">
               <table id="cart-view">
                 <tbody>
                   <tr class="item_1">
                     <td class="img"><a href="" title="Nike Air Max 90 Essential &quot;Grape&quot;"><img
-                          src="images/shoes/1.jpg" alt="/products/nike-air-max-90-essential-grape"></a></td>
+                          src="images/iphone-14-pro-max-purple-1.jpg"
+                          alt="/products/nike-air-max-90-essential-grape"></a></td>
                     <td>
                       <a class="pro-title-view" style="color: #272727" href=""
-                        title="Nike Air Max 90 Essential &quot;Grape&quot;">Nike Air Max 90 Essential "Grape"</a>
-                      <span class="variant">Tím / 36</span>
+                        title="Nike Air Max 90 Essential &quot;Grape&quot;">Phone Iphone 14 Pro Max </a>
+                      <span class="variant">Purple / 256GB</span>
                       <span class="pro-quantity-view">1</span>
-                      <span class="pro-price-view">4,800,000₫</span>
+                      <span class="pro-price-view">1.098.00$</span>
                       <span class="remove_link remove-cart"><a href=""><i style="color: #272727;"
                             class="fas fa-times"></i></a></span>
                     </td>
@@ -187,40 +155,40 @@
               <table class="table-total">
                 <tbody>
                   <tr>
-                    <td class="text-left">TỔNG TIỀN:</td>
-                    <td class="text-right" id="total-view-cart">4,800,000₫</td>
+                    <td class="text-left">TOTAL AMOUNT:</td>
+                    <td class="text-right" id="total-view-cart">1.098.00$</td>
                   </tr>
                   <tr>
-                    <td class="distance-td"><a href="" class="linktocart button dark">Xem giỏ hàng</a></td>
-                    <td><a href="" class="linktocheckout button dark">Thanh toán</a></td>
+                    <td class="distance-td"><a href="" class="linktocart button dark">View cart</a></td>
+                    <td><a href="" class="linktocheckout button dark">Pay</a></td>
                   </tr>
                 </tbody>
               </table>
 
-              <a href="" target="_blank" class="button btn-check" style="text-decoration:none;"><span>Click nhận mã giảm
-                  giá ngay !</span></a>
+              <a href="" target="_blank" class="button btn-check" style="text-decoration:none;"><span>Click to get
+                  discount code
+                  price now!</span></a>
             </div>
           </div>
         </div>
-      </div>
 
-      <div class="icon-ol">
-        <a style="color: #272727" href="">
-          <i class="fas fa-user-alt"></i>
-        </a>
-        <a href="#" class="" uk-toggle="target: #offcanvas-flip">
-          <i class="fas fa-search" style="color: black"></i>
-        </a>
+        <div class="icon-ol">
+          <a style="color: #272727" href="signin.html">
+            <i class="fas fa-user-alt"></i>
+          </a>
+          <a href="#" class="" uk-toggle="target: #offcanvas-flip">
+            <i class="fas fa-search" style="color: black"></i>
+          </a>
 
-        <a style="color: #272727" href="#" uk-toggle="target: #offcanvas-flip2">
-          <i class="fas fa-shopping-cart"></i>
-        </a>
-        <button class="navbar-toggler" type="button" uk-toggle="target: #offcanvas-flip1" data-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+          <a style="color: #272727" href="#" uk-toggle="target: #offcanvas-flip2">
+            <i class="fas fa-shopping-cart"></i>
+          </a>
+          <button class="navbar-toggler" type="button" uk-toggle="target: #offcanvas-flip1" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        </div>
       </div>
-    </div>
     </div>
 
   </nav>
@@ -637,7 +605,7 @@
                   <a style=" color: black;
                                                     font-size: 14px;text-decoration: none;" href="#"
                     title="Adidas EQT Cushion ADV" inspiration pack>
-                    Mercurial Vapor 13 CR7 cổ cao 
+                    Mercurial Vapor 13 CR7 cổ cao
                 </div>
                 <div class="pro-price">
                   <p class="">3,000,000₫</p>
@@ -946,7 +914,7 @@
                   <a style=" color: black;
                                                 font-size: 14px;text-decoration: none;" href="#"
                     title="Adidas EQT Cushion ADV" inspiration pack>
-                    Adidas EQT 
+                    Adidas EQT
                   </a>
                 </div>
                 <div class="pro-price">
@@ -974,46 +942,24 @@
     </div>
   </div>
   <!--gallery-->
-  <section class="section section-gallery">
-    <div class="">
-      <div class="hot_sp" style="padding-top: 70px;padding-bottom: 50px;">
-        <h2 style="text-align:center;padding-top: 10px">
-          <a style="font-size: 28px;color: black;text-decoration: none" href="">Khách hàng và DN</a>
-        </h2>
-      </div>
-      <div class="list-gallery clearfix">
-        <ul class="shoes-gp">
-          <li>
-            <div class="gallery_item">
-              <img class="img-resize" src="images/shoes/gallery_item_1.jpg" alt="">
+  <section class="section wrapper-home-newsletter">
+    <div class="container-fluid">
+      <div class="content-newsletter">
+        <h2>Sign up</h2>
+        <p>Sign up for the business newsletter to update new products, receive information about special offers and
+          information
+          believe
+          other discounts.</p>
+        <div class="form-newsletter">
+          <form action="" accept-charset="UTF-8" class="">
+            <div class="form-group">
+              <input type="hidden" id="contact_tags">
+              <input required="" type="email" value="" placeholder="Enter your email" aria-label="Email Address"
+                class="">
+              <button type="submit" class=""><span>To send</span></button>
             </div>
-          </li>
-          <li>
-            <div class="gallery_item">
-              <img class="img-resize" src="images/shoes/gallery_item_2.jpg" alt="">
-            </div>
-          </li>
-          <li>
-            <div class="gallery_item">
-              <img class="img-resize" src="images/shoes/gallery_item_3.jpg" alt="">
-            </div>
-          </li>
-          <li>
-            <div class="gallery_item">
-              <img class="img-resize" src="images/shoes/gallery_item_4.jpg" alt="">
-            </div>
-          </li>
-          <li>
-            <div class="gallery_item">
-              <img class="img-resize" src="images/shoes/gallery_item_5.jpg" alt="">
-            </div>
-          </li>
-          <li>
-            <div class="gallery_item">
-              <img class="img-resize" src="images/shoes/gallery_item_6.jpg" alt="">
-            </div>
-          </li>
-        </ul>
+          </form>
+        </div>
       </div>
     </div>
   </section>
@@ -1024,15 +970,11 @@
           <div class="col-xs-12 col-sm-6 col-md-3">
             <div class="footer-col footer-block">
               <h4 class="footer-title">
-                Giới thiệu
+                INTRODUCE
               </h4>
               <div class="footer-content">
-                <p>DN trang mua sắm trực tuyến của thương hiệu giày, thời trang nam, nữ, phụ kiện, giúp bạn
-                  tiếp
-                  cận xu hướng thời trang mới nhất.</p>
-                <div class="logo-footer">
-                  <img src="images/logo-bct.png" alt="Bộ Công Thương">
-                </div>
+                <p>Online shopping site for the latest, best, and reputable products, helping you access the latest
+                  technology trends.</p>
                 <div class="social-list">
                   <a href="#" class="fab fa-facebook"></a>
                   <a href="#" class="fab fa-google"></a>
@@ -1046,24 +988,24 @@
           <div class="col-xs-12 col-sm-6 col-md-3">
             <div class="footer-col footer-link">
               <h4 class="footer-title">
-                PHÁP LÝ &amp; CÂU HỎI
+                JURIDICAL &amp; QUESTION
               </h4>
               <div class="footer-content toggle-footer">
                 <ul>
                   <li class="item">
-                    <a href="#" title="Tìm kiếm">Tìm kiếm</a>
+                    <a href="#" title="Search">Search</a>
                   </li>
                   <li class="item">
-                    <a href="#" title="Giới thiệu">Giới thiệu</a>
+                    <a href="#" title="Introduce">Introduce</a>
                   </li>
                   <li class="item">
-                    <a href="#" title="Chính sách đổi trả">Chính sách đổi trả</a>
+                    <a href="#" title="Return Policy">Return Policy</a>
                   </li>
                   <li class="item">
-                    <a href="#" title="Chính sách bảo mật">Chính sách bảo mật</a>
+                    <a href="#" title="Privacy Policy">Privacy Policy</a>
                   </li>
                   <li class="item">
-                    <a href="#" title="Điều khoản dịch vụ">Điều khoản dịch vụ</a>
+                    <a href="#" title="Terms of Service">Terms of Service</a>
                   </li>
                 </ul>
               </div>
@@ -1072,14 +1014,14 @@
           <div class="col-xs-12 col-sm-6 col-md-3">
             <div class="footer-col footer-block">
               <h4 class="footer-title">
-                Thông tin liên hệ
+                Contact Info
               </h4>
               <div class="footer-content toggle-footer">
                 <ul>
-                  <li><span>Địa chỉ:</span>66 Võ Văn Tần, quận Thanh Khê, thành phố Đà Nẵng</li>
-                  <li><span>Điện thoại:</span> 0949431757</li>
-                  <li><span>Fax:</span> 0376876586</li>
-                  <li><span>Mail:</span>dunien811@gmail.com</li>
+                  <li><span>Address:</span> 66 Vo Van Tan, Thanh Khe district, Da Nang city</li>
+                  <li><span>Phone:</span> 0949431757</li>
+                  <li><span>Fax:</span> 0376876576</li>
+                  <li><span>Mail:</span> dunien811@gmail.com</li>
                 </ul>
               </div>
             </div>
