--- a/blog.html
+++ b/blog.html
@@ -4,21 +4,16 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  
   <link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css">
-
   <link rel="stylesheet" type="text/css" href="css/style.css">
-
   <link rel="stylesheet" href="plugins/animate/animate.min.css">
-
   <link rel="stylesheet" href="plugins/fontawesome/all.css">
-
   <link href="plugins/webfonts/font.css" rel="stylesheet">
   <link rel="stylesheet" href="plugins/owl.carousel/owl.carousel.min.css" type="text/css">
   <link rel="stylesheet" href="plugins/owl.carousel/owl.theme.default.min.css">
   <!-- UIkit CSS -->
   <link rel="stylesheet" href="plugins/uikit/uikit.min.css" />
-
 
   <title>News</title>
 
@@ -45,7 +40,7 @@
             <a class="nav-link" href="index.html">HOME PAGE</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Product.html">PRODUCT</a>
+            <a class="nav-link" href="product.html">PRODUCT</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="introduce.html">INTRODUCE</a>
@@ -54,7 +49,7 @@
             <a class="nav-link" href="blog.html">BLOG</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Contact.html">CONTACT</a>
+            <a class="nav-link" href="contact.html">CONTACT</a>
           </li>
         </ul>
       </div>
