--- a/contact.html
+++ b/contact.html
@@ -4,15 +4,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  
   <link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css">
-
   <link rel="stylesheet" type="text/css" href="css/style.css">
-
   <link rel="stylesheet" href="plugins/animate/animate.min.css">
-
   <link rel="stylesheet" href="plugins/fontawesome/all.css">
-
   <link href="plugins/webfonts/font.css" rel="stylesheet">
   <link rel="stylesheet" href="plugins/owl.carousel/owl.carousel.min.css" type="text/css">
   <link rel="stylesheet" href="plugins/owl.carousel/owl.theme.default.min.css" type="text/css">
@@ -38,7 +34,7 @@
 
     <div class="container">
       <a class="navbar-brand" href="index.html">
-        <img src="images/logo.png" class="logo-top" alt="">
+        <img src="images/logo.jpg" class="logo-top" alt="">
       </a>
       <div class="desk-menu collapse navbar-collapse justify-content-md-center" id="navbarNav">
         <ul class="navbar-nav">
@@ -46,7 +42,7 @@
             <a class="nav-link" href="index.html">HOME PAGE</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Product.html">PRODUCT</a>
+            <a class="nav-link" href="product.html">PRODUCT</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="introduce.html">INTRODUCE</a>
@@ -55,7 +51,7 @@
             <a class="nav-link" href="blog.html">BLOG</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="Contact.html">CONTACT</a>
+            <a class="nav-link" href="contact.html">CONTACT</a>
           </li>
         </ul>
       </div>
@@ -418,8 +414,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-  <script src="js/owl.carousel.min.js"></script>
-  <script src="js/jquery.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.7/js/uikit.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.7/js/uikit-icons.min.js"></script>
 </body>
